--- a/src/main/resources/com/example/demojavafx/hello-view.fxml
+++ b/src/main/resources/com/example/demojavafx/hello-view.fxml
@@ -50,7 +50,7 @@
       </font>
    </Button>
    <Button fx:id="exitButton1" layoutX="231.0" layoutY="487.0" mnemonicParsing="false" onAction="#fullScreenButton"
-           prefHeight="34.0" prefWidth="206.0" text="FullScreen enable/disable" textAlignment="CENTER">
+           prefHeight="34.0" prefWidth="206.0" text="FullScreen enable" textAlignment="CENTER">
       <font>
          <Font size="14.0"/>
       </font>
